--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -3,7 +3,6 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/layout1}">
 
-
 <!-- 사용자 스크립트 추가 -->
 <th:block layout:fragment="script">
     <script th:inline="javascript">
@@ -46,14 +45,15 @@
 
 <!-- 검색창 부분 -->
 <div layout:fragment="content" class="text-center" style="margin-top: 100px;">
-    <!--<form layout:fragment="@{'/' + ${boards.number}}" role="form" method="GET" th:object="${boards}" class="form-inline justify-content-center">-->
+    <form layout:fragment="@{'/' + ${boards.number}}" role="form" method="GET" th:object="${boards}" class="form-inline justify-content-center">
         <!-- 검색 기능 구현 -->
+<!--        <form action="/" method="GET" class="form-inline justify-content-center">-->
         <form>
             <div class="row justify-content-center">
                 <div class="col-md-8">
                     <div class="input-group" th:object="${boardSearchDto}">
                         <div class="input-group-prepend ">
-                            <select th:field="*{searchDateType}" class="btn btn-outline-secondary dropdown-toggle search1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <select th:field="*{searchDateType}" class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <option value="all"><a class="dropdown-item">전체기간</a></option>
                                 <option value="1d"><a class="dropdown-item">1일</a></option>
                                 <option value="1w"><a class="dropdown-item">1주</a></option>
@@ -61,12 +61,12 @@
                                 <option value="6m"><a class="dropdown-item">6개월</a></option>
 
                             </select>
-                            <select th:field="*{searchBy}" class="btn btn-outline-secondary dropdown-toggle search2"  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <select th:field="*{searchBy}" class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <option value=""><a class="dropdown-item">전체</a></option>
                                 <option value="title"><a class="dropdown-item">제목</a></option>
                                 <option value="boardId"><a class="dropdown-item">번호</a></option>
                                 <option value="content"><a class="dropdown-item">본문</a></option>
-                                <!--<option value="blike">Blike</option>-->
+                                <!--                                <option value="blike">Blike</option>-->
                             </select>
                         </div>
                         <input th:field="*{searchQuery}" class="form-control mr-sm-2"
@@ -96,6 +96,7 @@
                                 <option value="createdBy">생성일</option>
                             </select>
                         </div>
+
                         <table class="table table-striped" style="table-layout: fixed; width: 100%;">
                             <thead>
                             <tr>
@@ -171,9 +172,6 @@
 
                         </ul>
                     </div>
-
-
-
 
                 </div>
             </div>
