--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -422,19 +422,15 @@ ul#commentList li {
     /* 좋아요 부분 */
 
 
-    .like-button {
+    #like-icon {
       margin-left: 20px;
       background-color: #feec9e; /* 배경색상 */
       border-color: none; /* 테두리 없앰 */
       color: #7c6839;   /* 글자 색 */
     }
 
-    .like-button:hover {
+    #like-icon:hover {
       background-color: #ff0044; /* 배경색상 */
       color: #fff9e4;
-    }
-
-    .like-button.active {
-      background-color: #ff0044;
     }
 
