--- a/src/main/resources/templates/users/userForm.html
+++ b/src/main/resources/templates/users/userForm.html
@@ -21,15 +21,35 @@
             }
         });
     </script>
-
 </th:block>
+
+
+<!--<script type="text/javascript">-->
+<!--function passConfirm() {-->
+<!--    var password = document.getElementById('password');-->
+<!--    var passwordConfirm = document.getElementById('passwordConfirm');-->
+<!--    var confirmMsg = document.getElementById('confirmMsg');-->
+<!--    var correctColor = "#00ff00";-->
+<!--    var wrongColor ="#ff0000";-->
+
+<!--    if(password.value == passwordConfirm.value) {-->
+<!--        confirmMsg.style.color = correctColor;-->
+<!--        confirmMsg.innerHTML = "비밀번호 일치";-->
+<!--        return true;-->
+<!--    } else {-->
+<!--        confirmMsg.style.color = wrongColor;-->
+<!--        confirmMsg.innerHTML = "비밀번호 불일치";-->
+<!--        return false;-->
+<!--    }-->
+<!--}-->
+<!--</script>-->
 
 <header th:insert="fragments/header.html"></header>
 <div layout:fragment="content">
     <div class="d-flex justify-content-center">
         <div class="col-md-8" style="background-color: #fff; border-radius: 10px; box-shadow: 0px 2px 10px rgba(0,0,0,0.1);">
             <form action="/user/new" role="form" method="post"
-                  th:object="${userFormDto}">
+                  th:object="${userFormDto}" onsubmit="return passConfirm();">
 
                 <div class="form-group">
                     <label th:for="email">이메일</label>
@@ -40,31 +60,39 @@
                 </div>
 
                 <div class="form-group">
-                    <label th:for="id">아이디</label>
+                    <label th:for="id">닉네임</label>
                     <input type="text" th:field="*{id}" class="form-control"
-                           placeholder="아이디를 입력하세요.">
+                           placeholder="닉네임을 입력하세요.">
                     <p th:if="${#fields.hasErrors('id')}"
                        th:errors="*{id}" class="fieldError">Incorrect data</p>
                 </div>
 
-                <div class="form-group">
-                    <label th:for="nic">닉네임</label>
-                    <input type="text" th:field="*{nic}" class="form-control"
-                           placeholder="닉네임을 입력하세요.">
-                    <p th:if="${#fields.hasErrors('nic')}"
-                       th:errors="*{nic}" class="fieldError">Incorrect data</p>
-                </div>
+<!--                <div class="form-group">-->
+<!--                    <label th:for="nic">닉네임</label>-->
+<!--                    <input type="text" th:field="*{nic}" class="form-control"-->
+<!--                           placeholder="닉네임을 입력하세요.">-->
+<!--                    <p th:if="${#fields.hasErrors('nic')}"-->
+<!--                       th:errors="*{nic}" class="fieldError">Incorrect data</p>-->
+<!--                </div>-->
 
                 <div class="form-group">
                     <label th:for="pw">비밀번호</label>
-                    <input type="password" th:field="*{pw}" class="form-control"
+                    <input type="password" th:field="*{pw}" class="form-control" id="password"
                            placeholder="비밀번호를 입력하세요.">
                     <p th:if="${#fields.hasErrors('pw')}"
                        th:errors="*{pw}" class="fieldError">Incorrect data</p>
                 </div>
 
+<!--                <div class="form-group">-->
+<!--                    <label th:for="pw2">비밀번호</label>-->
+<!--                    <input type="password" th:field="*{pw2}" class="form-control"-->
+<!--                           placeholder="비밀번호를 입력하세요." id="passwordConfirm">-->
+<!--                    <p th:if="${#fields.hasErrors('pw2')}"-->
+<!--                       th:errors="*{pw2}" class="fieldError">Incorrect data</p>-->
+<!--                </div>-->
+
                 <div style="text-align:center">
-                    <button type="submit" class="btn btn-primary okButton" style="">확인</button>
+                    <button type="submit" class="btn btn-primary okButton" style="" onclick="passConfirm()">확인</button>
                 </div>
                 <!--                <input type="hidden" th:name="${_csrf.parameterName}"-->
                 <!--                       th:value="${_csrf.token}">-->
