--- a/src/main/resources/templates/users/userLoginForm.html
+++ b/src/main/resources/templates/users/userLoginForm.html
@@ -25,10 +25,9 @@
           <input type="password" name="password" id="pw" class="form-control" placeholder="비밀번호 입력">
         </div>
         <p th:if="${loginErrorMsg}" class="error" th:text="${loginErrorMsg}"></p>
-        <button class="btn btn-primary loginButton" onclick="location.href='/'">로그인</button>
+        <button class="btn btn-primary loginButton" >로그인</button>
         <button type="button" class="btn btn-primary signupButton" onclick="location.href='/user/new'">회원가입</button>
-        <a href="https://kauth.kakao.com/oauth/authorize?client_id=717132960bdd5b0e541acb17c327097d&redirect_uri=http://localhost:8080/user/auth/kakao/callback&response_type=code">
-          <img height="38px" src="/img/kakao_login_button.png"></a>
+        <a href="https://kauth.kakao.com/oauth/authorize?client_id=717132960bdd5b0e541acb17c327097d&redirect_uri=http://localhost:8080/user/auth/kakao/callback&response_type=code"><img height="38px" src="/img/kakao_login_button.png"></a>
         <!--        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">-->
       </form>
       <div style="position: relative; width: 100%; height: 20px; margin-top: -10px;">
